force-app/main/default/objects/Recipe_Ingredient__c/fields/Alternative_ingredients__c.field-meta.xml
<CustomField>
    <fullName>Alternative_ingredients__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternative ingredients</label>
    <referenceTo>Ingredients__c</referenceTo>
    <relationshipLabel>Recipe Ingredients (Alternative ingredients)</relationshipLabel>
    <relationshipName>Recipe_Ingredients1</relationshipName>
    <type>Lookup</type>
</CustomField>