force-app/main/default/objects/Recipe_Ingredient__c/fields/Ingredients__c.field-meta.xml
<CustomField>
    <fullName>Ingredients__c</fullName>
    <label>Ingredients</label>
    <referenceTo>Ingredients__c</referenceTo>
    <relationshipLabel>Recipe Ingredients</relationshipLabel>
    <relationshipName>Recipe_Ingredients</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>