force-app/main/default/objects/Recipe_Ingredient__c/fields/Recipe__c.field-meta.xml
<CustomField>
    <fullName>Recipe__c</fullName>
    <label>Recipe</label>
    <referenceTo>Recipe__c</referenceTo>
    <relationshipLabel>Recipe Ingredients</relationshipLabel>
    <relationshipName>Recipe_Ingredients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>