force-app/main/default/objects/Recipe_Ingredient__c/fields/Recipe_segment__c.field-meta.xml
<CustomField>
    <fullName>Recipe_segment__c</fullName>
    <description>Segment of the dish that this ingredient belongs too (sauce, marinade...)</description>
    <inlineHelpText>It will be displayed as a subtitle before the ingredients that share the same value.
If no segment is specified, you can leave it empty.

Note: This field is free text. Make sure there are no mistakes; otherwise, it won’t be displayed as intended. (Use copy/paste for the same segment across different ingredients.)</inlineHelpText>
    <label>Recipe segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>