force-app/main/default/objects/Recipe_Ingredient__c/fields/Recipe_segment_DE__c.field-meta.xml
<CustomField>
    <fullName>Recipe_segment_DE__c</fullName>
    <label>Recipe segment DE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>