force-app/main/default/objects/Recipe_Ingredient__c/fields/Unit_of_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measurement__c</fullName>
    <label>Unit of Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>g</fullName>
            </value>
            <value>
                <fullName>ml</fullName>
            </value>
            <value>
                <fullName>Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>