force-app/main/default/objects/Recipe_Ingredient__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Recipe__c</columns>
    <columns>NAME</columns>
    <columns>Quantity__c</columns>
    <columns>Optional__c</columns>
    <columns>Ingredients__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>